--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "homepage",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/shinsojeong/TheGrind",
+  "homepage": "https://shinsojeong.github.com/TheGrind",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
