--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -2,9 +2,9 @@ name: The Grind Github Actions
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 on:
   push:
-    branches: main
+    branches: ["master"]
   pull_request:
-    branches: main
+    branches: ["master"]
 
 jobs:
   deploy:
@@ -19,13 +19,23 @@ jobs:
         with:
           node-version: 12.x
 
-      - name: Install Dependencies
-        run: npm install
+      - name: cache
+        uses: actions/cache@v3
+        id: cache
+        with:
+          path: "**/node_modules"
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
 
-      - name: Build Docs
+      - name: CI
+        run: npm install
+        if: steps.cache.outputs.cache-hit != 'true'
+
+      - name: Build
         run: npm run build
 
-      - name: Deploy Docs
+      - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.ACTION_KEY }}
