--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "homepage",
+  "name": "the-grind",
   "version": "0.1.0",
-  "private": true,
   "homepage": "https://shinsojeong.github.com/TheGrind",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
